--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,8 +27,8 @@ input,
 select,
 textarea {
   border-radius: var(--radius);
-  background: #111; 
-  border: 1px solid #333;
+  /* background: #111; 
+  border: 1px solid #333; */
   padding: 10px 14px;
   transition: 0.2s ease;
   /* color: white; */
